# todo-serverless

./: .gitignore  Cargo.toml  LICENSE  Makefile  docker-compose.yaml  readme.adoc  samconfig.toml  template.yaml
http/: get-todos.http  todos.http
todo_api/: Cargo.toml
todo_api/src/: lib.rs
todo_api/src/models/: mod.rs
todo_api/src/repository/: todo_repository.rs
todo_api/src/service/: get_todos_service.rs  lambda_service.rs  mod.rs  todo_service.rs
todo_ui/: Cargo.toml  index.html  run.sh  tailwind.config.js
todo_ui/src/: main.rs
todo_ui/src/components/: app.rs  mod.rs  todo_list_item.rs  todo_modal.rs  todo_service.rs
todo_ui/src/models/: mod.rs
