[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

[dependencies]

lambda_runtime = { version = "0.9.1", optional = true  }
lambda_http = { version = "0.9.2", optional = true }
aws-sdk-dynamodb = { version = "1.14.0", optional = true  }

serde = "1.0.196"
serde_json = "1.0.111"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "env-filter", "json"] }
uuid = { version = "1.7.0", features = ["v4"] }

[features]
default = ["lambda"]
lambda = ["lambda_runtime", "lambda_http"]

[[bin]]
name = "get-todos"
path = "src/bin/lambda/get_todos.rs"
test = false
required-features = ["lambda"]