[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

[dependencies]

lambda_runtime = { version = "0.10.0", optional = true  }
lambda_http = { version = "0.10.0", optional = true }
aws-config = { version = "1.1.7", optional = true }
aws-sdk-dynamodb = { version = "1.16.0", optional = true  }

serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "env-filter", "json"] }
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4.34", features = ["serde"] }

[features]
default = ["lambda"]
lambda = ["lambda_runtime", "lambda_http", "aws-config","aws-sdk-dynamodb"]

[[bin]]
name = "get-todos"
path = "src/bin/lambda/get_todos.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "get-todo"
path = "src/bin/lambda/get_todo.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "add-todo"
path = "src/bin/lambda/add_todo.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "edit-todo"
path = "src/bin/lambda/edit_todo.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "delete-todo"
path = "src/bin/lambda/delete_todo.rs"
test = false
required-features = ["lambda"]