[package]
name = "todo-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
uuid = { version = "1.7.0", features = ["v4"] }
instant = { version = "0.1.12", features = [ "wasm-bindgen", "inaccurate" ] }
reqwest = "0.11.24"