[package]
name = "todo-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
leptos = { version = "0.6.6", features = ["csr", "nightly"] }
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4.34", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["blocking","json"] }
serde = {version = "1.0.197", features = ["derive"]}
serde_json = { version = "1.0.113" }